feat: identify authentication devices
